examples/type_system/failing/137_tuple_projection_unresolved_path_unchanged.flx
fn main() -> Unit {
    let value: Int = mystery.0
}
